<resources>
    <string name="app_name">V-sion</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="swipe_down_to_refresh_text">Swipe down to refresh</string>
    <string name="swipe_left_instruction_text">Swipe left to delete any record</string>
    <string name="delete_warning_text">Record deleted cannot be recovered later.</string>
    <string name="target_time_text">Target Time:</string>
    <string name="total_time_text">Total Time:</string>
    <string name="start_from_text">Start From:</string>
    <string name="unknown_time_text">--:--:--</string>
    <string name="till_text">Till:</string>
    <string name="menu_item_search_text">Search</string>
    <string name="menu_item_timer_text">Timer</string>
    <string name="menu_item_my_profile_text">My Profile</string>
    <string name="menu_item_past_usage_text">Past Usage</string>
    <string name="dialog_confirm_text">Confirm</string>
    <string name="dialog_cancel_text">Cancel</string>
    <string name="target_advice_text">Friendly advice:\nTry to target no more than 2 hours everyday.\n\nExcessive mobile use can lead to poor concentration, bad memory, poor sleep quality, increased anxiety, etc.\n\nFor more information, visit https://www.inc.com/christina-desmarais/heres-why-you-need-to-put-your-phone-away-according-to-science.html</string>

    <!-- START Firebase Resources-->
    <string name="label_emailpassword">Email/Password Authentication</string>
    <string name="desc_emailpassword">Use an email and password to authenticate with Firebase.</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="send_link">Send Link</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="token_null">Token: null</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>
    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="emailpassword_title_text">Please Login Below</string>
    <!--END Firebase Resources-->
    <!--HARD CODED web client id (not best practice)-->
    <!--END-->
</resources>