<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:title="@string/menu_item_search_text"
        android:id="@+id/menu_search"
        android:icon="@drawable/ic_baseline_search_24"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always|collapseActionView"
        android:visible="false"/>
    <item
        android:id="@+id/item_timer"
        android:icon="@drawable/ic_baseline_timer_24"
        android:title="@string/menu_item_timer_text"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/ic_baseline_profile"
        android:orderInCategory="1"
        android:title="@string/menu_item_my_profile_text"
        app:showAsAction="never" />
    <item android:id="@+id/pastUsageFragment"
        android:icon="@drawable/ic_baseline_record"
        android:orderInCategory="2"
        android:title="@string/menu_item_past_usage_text"
        app:showAsAction="never" />
</menu>
